--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,9 @@
   "devDependencies": {
     "vite": "5.4.8"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "dependencies": {
     "@authorium/ckeditor5-plugin-linking-example": "link:../ckeditor5-plugin-linking-example",
     "ckeditor5": "43.1.0"
-  }
+  },
+  "packageManager": "yarn@4.3.1"
 }
